--- a/views/payment_results.erb
+++ b/views/payment_results.erb
@@ -7,7 +7,7 @@
     APR
   </dt>
   <dd>
-    <%= (@apr_rounded * 100).to_s(:percentage) %>
+    <%= @apr.to_fs(:percentage, {:precision => 4}) %>
   </dd>
 
   <dt>
